maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:16: error: not found: value prendsBiscuit
	prendsBiscuit();
        ^